--- a/de/404.html
+++ b/de/404.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
+    <title>404 - Seite nicht gefunden</title>
     
     <!-- SEO: hreflang tags -->
     <link rel="alternate" hreflang="en" href="https://serg-markovich.de/404.html" />
     <link rel="alternate" hreflang="de" href="https://serg-markovich.de/de/404.html" />
     <link rel="alternate" hreflang="x-default" href="https://serg-markovich.de/404.html" />
     
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/404.html" class="active">EN</a> | 
-        <a href="/de/404.html">DE</a>
+        <a href="/404.html">EN</a> | 
+        <a href="/de/404.html" class="active">DE</a>
     </div>
 
     <div class="container">
         <header>
             <h1>404</h1>
-            <p class="subtitle">Page Not Found</p>
+            <p class="subtitle">Seite nicht gefunden</p>
         </header>
 
         <section class="error-content">
-            <p>Oops! The page you're looking for doesn't exist.</p>
-            <p><a href="/">← Back to Home</a></p>
+            <p>Hoppla! Die gesuchte Seite existiert nicht.</p>
+            <p><a href="/de/">← Zurück zur Startseite</a></p>
         </section>
 
         <footer>
