Add German language version with language switcher

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="alternate" hreflang="de" href="https://serg-markovich.de/de/" />
     <link rel="alternate" hreflang="x-default" href="https://serg-markovich.de/" />
     
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!-- Language Switcher -->
