Add main tag wrapper for proper centering

--- a/404.html
+++ b/404.html
@@ -19,15 +19,16 @@
         <a href="/de/404.html">DE</a>
     </div>
         <header>
+            <main>
             <h1>404</h1>
             <p class="subtitle">Page Not Found</p>
         </header>
-
+    <main>
         <section class="error-content">
             <p>Oops! The page you're looking for doesn't exist.</p>
             <p><a href="/">← Back to Home</a></p>
         </section>
-
+    </main>
         <footer>
             <p>© 2026 Serg Markovich</p>
         </footer>
