--- a/de/404.html
+++ b/de/404.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    
     <!-- Language Switcher -->
     <div class="lang-switcher">
         <a href="/404.html">EN</a> | 
@@ -22,12 +23,12 @@
             <h1>404</h1>
             <p class="subtitle">Seite nicht gefunden</p>
         </header>
-
+    <main>
         <section class="error-content">
             <p>Hoppla! Die gesuchte Seite existiert nicht.</p>
             <p><a href="/de/">← Zurück zur Startseite</a></p>
         </section>
-
+    </main> 
         <footer>
             <p>© 2026 Serg Markovich</p>
         </footer>
