--- a/de/contacts.html
+++ b/de/contacts.html
@@ -22,7 +22,7 @@
             <h1>Kontakt</h1>
             <p class="subtitle">Kontaktieren Sie mich</p>
         </header>
-
+        <main>
         <section class="contact-info">
             <h2>Kontaktinformationen</h2>
             <p>Kontaktieren Sie mich gerne für Zusammenarbeit, berufliche Möglichkeiten oder einfach zum Vernetzen.</p>
@@ -36,6 +36,7 @@
 
         <footer>
             <p>© 2026 Serg Markovich | <a href="index.html">Startseite</a></p>
+        </main>
         </footer>
 </body>
 </html>
