--- a/de/index.html
+++ b/de/index.html
@@ -23,13 +23,12 @@
             <h1>Serg Markovich</h1>
             <p class="subtitle">DevOps Engineer | Stuttgart, Deutschland</p>
         </header>
-
+    <main>  
         <section class="about">
             <h2>Über mich</h2>
             <p>DevOps Engineer mit Fokus auf Cloud-Infrastruktur, Automatisierung und CI/CD-Pipelines.</p>
             <p>Derzeit baue ich Expertise in Azure, Docker, Kubernetes und Infrastructure as Code auf.</p>
         </section>
-
         <section class="terminal">
             <div class="terminal-header">
                 <span>bash</span> — serg@devops
@@ -69,9 +68,9 @@
             </ul>
             <p><em>Portfolio-Website in Kürze verfügbar...</em></p>
         </section>
-
+    </main>
         <footer>
-            <p>© 2026 Serg Markovich | <a href="contacts.html">Kontakt</a></p>
+            <p>© 2026 Serg Markovich | <a href="contacts.html">Kontakt</a></p>    
         </footer>
 </body>
 </html>
