--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Serg Markovich</h1>
             <p class="subtitle">DevOps Engineer | Stuttgart, Germany</p>
         </header>
-
+    <main>
         <section class="about">
             <h2>About</h2>
             <p>DevOps Engineer focused on cloud infrastructure, automation, and CI/CD pipelines.</p>
@@ -69,7 +69,7 @@
             </ul>
             <p><em>Portfolio website coming soon...</em></p>
         </section>
-
+    </main>
         <footer>
             <p>© 2026 Serg Markovich | <a href="contacts.html">Contact</a></p>
         </footer>
