--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
             <h1>Contact</h1>
             <p class="subtitle">Get in touch</p>
         </header>
-
+    <main>
         <section class="contact-info">
             <h2>Contact Information</h2>
             <p>Feel free to reach out for collaboration, opportunities, or just to connect.</p>
@@ -33,7 +33,7 @@
                 <p><strong>GitHub:</strong> <a href="https://github.com/serg-markovich" target="_blank">@serg-markovich</a></p>
             </div>
         </section>
-
+    </main>
         <footer>
             <p>© 2026 Serg Markovich | <a href="index.html">Home</a></p>
         </footer>
