Fix header padding and add contact email

--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
             <p>Feel free to reach out for collaboration, opportunities, or just to connect.</p>
             
             <div class="contact-details">
-                <p><strong>Email:</strong> Coming soon...</p>
+                <p> <a href="mailto:me@serg-markovich.de">me@serg-markovich.de</a></p>
                 <p><strong>Location:</strong> Stuttgart, Germany</p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/serg-markovich" target="_blank">@serg-markovich</a></p>
             </div>
