--- a/de/contacts.html
+++ b/de/contacts.html
@@ -28,7 +28,7 @@
             <p>Kontaktieren Sie mich gerne für Zusammenarbeit, berufliche Möglichkeiten oder einfach zum Vernetzen.</p>
             
             <div class="contact-details">
-                <p><strong>E-Mail:</strong> In Kürze verfügbar...</p>
+                <p>strong>E-Mail:</strong> <a href="mailto:me@serg-markovich.de">me@serg-markovich.de</a></p>
                 <p><strong>Standort:</strong> Stuttgart, Deutschland</p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/serg-markovich" target="_blank">@serg-markovich</a></p>
             </div>
