Fix header centering and add navigation

--- a/contacts.html
+++ b/contacts.html
@@ -21,6 +21,10 @@
         <header>
             <h1>Contact</h1>
             <p class="subtitle">Get in touch</p>
+                <nav>
+                    <a href="/">/home</a>
+                    <a href="/contacts.html">/contacts</a>
+                </nav>
         </header>
     <main>
         <section class="contact-info">
