--- a/de/contacts.html
+++ b/de/contacts.html
@@ -21,6 +21,10 @@
         <header>
             <h1>Kontakt</h1>
             <p class="subtitle">Kontaktieren Sie mich</p>
+            <nav>
+                <a href="/de/">/start</a>
+                <a href="/de/contacts.html">/kontakt</a>
+            </nav>
         </header>
         <main>
         <section class="contact-info">
