--- a/de/index.html
+++ b/de/index.html
@@ -22,6 +22,10 @@
         <header>
             <h1>Serg Markovich</h1>
             <p class="subtitle">DevOps Engineer | Stuttgart, Deutschland</p>
+            <nav>
+                <a href="/de/">/start</a>
+                <a href="/de/contacts.html">/kontakt</a>
+            </nav>
         </header>
     <main>  
         <section class="about">
