--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <header>
             <h1>Serg Markovich</h1>
             <p class="subtitle">DevOps Engineer | Stuttgart, Germany</p>
+            <nav>
+                <a href="/">/home</a>
+                <a href="/contacts.html">/contacts</a>
+            </nav>
         </header>
     <main>
         <section class="about">
