--- a/404.html
+++ b/404.html
@@ -22,6 +22,10 @@
             <main>
             <h1>404</h1>
             <p class="subtitle">Page Not Found</p>
+            <nav>
+                <a href="/">/home</a>
+                <a href="/contacts.html">/contacts</a>
+            </nav>
         </header>
     <main>
         <section class="error-content">
