--- a/contacts.html
+++ b/contacts.html
@@ -15,8 +15,10 @@
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/contacts.html" class="active">EN</a> | 
-        <a href="/de/contacts.html">DE</a>
+        <a href="/de/" class="lang-flag active" title="Deutsch">
+            <span>🇩🇪</span></a>
+        <a href="/" class="lang-flag" title="English">
+            <span>🇬🇧</span></a>
     </div>
     <main>
         <header>
