--- a/de/404.html
+++ b/de/404.html
@@ -16,8 +16,10 @@
     
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/404.html">EN</a> | 
-        <a href="/de/404.html" class="active">DE</a>
+        <a href="/de/" class="lang-flag active" title="Deutsch">
+            <span>🇩🇪</span></a>
+        <a href="/" class="lang-flag" title="English">
+            <span>🇬🇧</span></a>
     </div>
     <main>
         <header>
