--- a/de/contacts.html
+++ b/de/contacts.html
@@ -15,8 +15,10 @@
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/contacts.html">EN</a> | 
-        <a href="/de/contacts.html" class="active">DE</a>
+        <a href="/de/" class="lang-flag active" title="Deutsch">
+            <span>🇩🇪</span></a>
+        <a href="/" class="lang-flag" title="English">
+            <span>🇬🇧</span></a>
     </div>
         <main>
         <header>
