--- a/de/index.html
+++ b/de/index.html
@@ -16,8 +16,10 @@
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/">EN</a> | 
-        <a href="/de/" class="active">DE</a>
+        <a href="/de/" class="lang-flag active" title="Deutsch">
+            <span>🇩🇪</span></a>
+        <a href="/" class="lang-flag" title="English">
+            <span>🇬🇧</span></a>
     </div>
         <main>
         <header>
