--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/" class="active">EN</a> | 
-        <a href="/de/">DE</a>
+        <a href="/de/" class="lang-flag active" title="Deutsch">
+            <span>🇩🇪</span></a>
+        <a href="/" class="lang-flag" title="English">
+            <span>🇬🇧</span></a>
     </div>
         <main>
         <header>
