Improve language switcher with flags and better design

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/de/" class="lang-flag active" title="Deutsch">
-            <span>🇩🇪</span></a>
-        <a href="/" class="lang-flag" title="English">
-            <span>🇬🇧</span></a>
+        <a href="/de/" class="lang-btn active" title="Deutsch">
+            <span class="flag">🇩🇪</span>
+            <span class="lang-text">DE</span></a>
+        <a href="/" class="lang-btn" title="English">
+            <span class="flag">🇬🇧</span>
+            <span class="lang-text">EN</span></a>
     </div>
         <main>
         <header>
