--- a/contacts.html
+++ b/contacts.html
@@ -15,10 +15,12 @@
 <body>
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="/de/" class="lang-flag active" title="Deutsch">
-            <span>🇩🇪</span></a>
-        <a href="/" class="lang-flag" title="English">
-            <span>🇬🇧</span></a>
+        <a href="/" class="lang-btn active">
+            <span class="flag">🇬🇧</span>
+            <span class="lang-text">EN</span></a>
+        <a href="/de/" class="lang-btn">
+            <span class="flag">🇩🇪</span>
+            <span class="lang-text">DE</span></a>
     </div>
     <main>
         <header>
