--- a/de/404.html
+++ b/de/404.html
@@ -27,10 +27,14 @@
         <header>
             <h1>404</h1>
             <p class="subtitle">Seite nicht gefunden</p>
+                <nav>
+                    <a href="/de/">← Zurück zur Startseite</a>
+                    <a href="/de/contacts.html">/contacts</a>
+                    <a href="https://notes.serg-markovich.de">/notes</a>
+                </nav>
         </header>
         <section class="error-content">
-            <p>Hoppla! Die gesuchte Seite existiert nicht.</p>
-            <p><a href="/de/">← Zurück zur Startseite</a></p>
+            <p>Hoppla! Die gesuchte Seite existiert nicht.</p>    
         </section>
     </main> 
         <footer>
