--- a/de/contacts.html
+++ b/de/contacts.html
@@ -29,6 +29,8 @@
             <nav>
                 <a href="/de/">/start</a>
                 <a href="/de/contacts.html">/kontakt</a>
+                <a href="https://notes.serg-markovich.de">/notes</a>
+
             </nav>
         </header>
         <section class="contact-info">
