--- a/de/index.html
+++ b/de/index.html
@@ -30,6 +30,7 @@
             <nav>
                 <a href="/de/">/start</a>
                 <a href="/de/contacts.html">/kontakt</a>
+                <a href="https://notes.serg-markovich.de">/notizen</a>
             </nav>
         </header>  
         <section class="about">
