--- a/404.html
+++ b/404.html
@@ -29,6 +29,8 @@
             <nav>
                 <a href="/">/home</a>
                 <a href="/contacts.html">/contacts</a>
+                <a href="https://notes.serg-markovich.de">/notes</a>
+
             </nav>
         </header>
         <section class="error-content">
