--- a/contacts.html
+++ b/contacts.html
@@ -29,6 +29,7 @@
                 <nav>
                     <a href="/">/home</a>
                     <a href="/contacts.html">/contacts</a>
+                    <a href="https://notes.serg-markovich.de">/notes</a>
                 </nav>
         </header>
         <section class="contact-info">
